# agent-alpha

./: .bandit  .coderabbit.yaml  .coverage  .env.example  .gate_test  .gitguardian.yaml  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .trivyignore  CLAUDE.md  Makefile  SECURITY.md  Session_Handoff.md  a1_report_template.html  check_laravel.py  ct_preflight.py  deploy_quantum.sh  domains.txt  fetch_review.py  fetch_review2.py  fetch_review3.py  fetch_review4.py  fetch_review5.py  megaspringbed.yaml  pr_body.md  pr_body_applicator.txt  pr_body_applicator_factory.txt  pr_body_c2.md  pr_body_c3.md  pr_body_c4.md  pr_body_c5.md  pr_body_c6a.md  pr_body_ci.txt  pr_body_ci2.txt  pr_body_db_endpoints.txt  pr_body_hygiene.txt  pr_body_laravel_finding.md  pr_body_laravel_wiring.md  pr_body_lazy_vault.txt  (+21 more)
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  security-audit.yml
.venv312/: pyvenv.cfg
.venv312/Scripts/: activate  activate.bat
.windsurf/: SKILL.md  agent_rules.md  rules.md
.windsurf/workflows/: run-on-61.md
Projects/Agent-Alpha/: pyproject.toml  test_network_resilience.py
actuator_lab/: docker-compose.yml  nginx.conf  seed.sh
agent_alpha/a2a/: __init__.py
agent_alpha/agents/: __init__.py  base.py  http_client.py  monologue.py  monologue_stream.py  objective.py  planner.py  rate_limiter.py  target_profile.py  world_model.py
agent_alpha/conductor/: advance.py  api_auth.py  applicator_factory.py  authorization.py  blast_gate.py  domain_verification.py  emergency.py  engagement_profile.py  engagement_reducer.py  execute_agent.py  fanout.py  health.py  main.py  models.py  monologue_transport.py  policy.py  recon_runner.py  reporting.py  revoker.py  routes_monologue.py  run_status.py
agent_alpha/config/: constants.py  payload_prompt_template.md  policy.yaml  stores.py
agent_alpha/events/: event_types.py  projectors.py  store.py  trace.py
agent_alpha/graph/: narrative.py  networkx_store.py  nodes.py  persist.py  store.py
agent_alpha/live_fire/: __init__.py  a1_validation.example.yaml  a1_validation_runner.py  actuator_field_prove.py  backup_file_field_prove.py  beta_runner.py  browser_solve.py  browser_solve_service.py  chain_runner.py  db_chain_engagement.yaml  db_chain_runner.py  field_prove_common.py  git_exposure_chain_runner.py  git_exposure_field_prove.py  lab_guard.py  layer_v_runner.py  mock_laravel_debug.py  odoo_chain_runner.py  recon_tryhard_field_prove.py  runner.py  scoring.py  spa_secret_field_prove.py  validation_vs_scanner.py  wp_chain_engagement.example.yaml  wp_chain_runner.py
agent_alpha/llm/: __init__.py  orchestrator.py  redaction.py  routing.py
agent_alpha/memory/: engagement.py  intelligence.py  session.py
agent_alpha/oracle/: __init__.py  verifier.py
agent_alpha/recon/: backup_file_probe.py  capability_probe.py  db_service_probe.py  git_exposure_probe.py  js_secret_probe.py  odoo_dbmanager_probe.py  origin_discovery.py  passive_discovery.py  path_probe.py  reach_strategy.py  reach_transport.py  response_classifier.py  surface_discovery.py  transport_resilience.py  wp_config_probe.py
agent_alpha/security/: credential_assembly.py  laravel_env.py  leak_extraction.py  postgres_secrets_vault.py  secrets.py
agent_alpha/storage/: rls_guard.py
agent_alpha/tools/: composer.py  contracts.py  playbook.py  registry.py
backup_lab/: backup_file_engagement.yaml  docker-compose.yml  nginx.conf  seed.sh
docs/: A1_field_prove_runbook.md  ADR.md  ADR_HISTORY.md  ADR_ROADMAP.md  ADR_SUMMARY.md  ADR_bounded_autonomy_frontier.md  BUGS_AND_GAPS.md  FP_VALIDATION_RUNBOOK.md  INSTRUCTIONS_FOR_CLAUDE.md  KNOWLEDGE.md  OPERATIONAL_REFERENCE.md  P0_DECISION_RECORD.md  P2_HARDENING_SEAL.md  PHASE_2_IMPLEMENTATION_ORDER.md  PHASE_3_EXIT_CRITERIA.md  PHASE_3_TEST_CONTRACT.md  PRD.md  PROGRESS_TRACKER.md  PROJECT_INSTRUCTIONS.md  RECON_CONDITION_CATALOG.md  SESSION_CONTEXT_TEMPLATE.md  adr_bounded_autonomy_stall_semantics.md  adr_wiring_gate.md  conductor_advance_handoff.md  strategic_gaps_roadmap.md
engagements/: niagamas_wp.yaml
git_lab/: docker-compose.yml  git_exposure_engagement.yaml  nginx.conf  seed.sh
infra/: .env.example  README.md  beta_lab.yml  beta_lab_app.py  create_app_role.sql  docker-compose.yml  init-db.sql
js_lab/: .gitignore  Caddyfile  Caddyfile.fp  Caddyfile.fp.new  GROUND_TRUTH.md  generate_bundle.py  generate_bundle_b.py  generate_bundle_c.py  index.html
js_lab/hardened/: index.html
odoo_lab/: .env.example  README.md  docker-compose.yml  ground-truth.yaml  layer_v_b.example.yaml  layer_v_lab.yaml  nginx.conf  odoo.conf  seed.sh
proto/: a2a.proto
recon_lab/: README.md  docker-compose.yml  engagement.example.yaml  generate_leak.sh.example  ground_truth.yaml  nginx.conf  seed.sh
scripts/: check_doc_status.py  sign_profile.py
tests/: conftest.py
tests/PROTECTED/: test_proto_contract.py
tests/governance/: test_lab_guard.py  test_layering.py  test_wiring_gate.py
tests/integration/: test_cross_process_auth.py  test_lab_guard_coverage.py  test_monologue_pubsub.py  test_postgres_engagement_memory_store.py  test_postgres_event_store.py  test_recon_report_time_to_proof_wiring.py  test_redis_session_store.py  test_rls_guard.py  test_rls_isolation.py
tests/phase_0/: test_api_auth.py  test_auth_tenant_routing.py  test_authorization.py  test_authorization_event_sourced.py  test_authorization_gate_coverage.py  test_authorized_origins.py  test_conductor_main.py  test_constants.py  test_db_endpoint_scope.py  test_emergency.py  test_emergency_log_scrub.py  test_emergency_revoker.py  test_emergency_tenant_routing.py  test_engagement_authorization_gate.py  test_engagement_id_validation.py  test_engagement_reducer.py  test_event_store.py  test_fanout.py  test_policy_enforcer.py  test_policy_yaml.py  test_proto_a2a.py  test_run_dispatch.py  test_run_engagement_task.py  test_run_status.py  (+1 more)
wp_lab/: .env.example  .gitignore  docker-compose.yml  ground_truth.yaml  nginx.conf  score_wp_lab.py  seed.sh  wp_lab_engagement.yaml
(+229 files in other folders)
