[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-alpha"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pyyaml",
    "cryptography",
    "fastapi",
    "httpx",
    "celery",
    "redis",
    "python-multipart",
    "uvicorn",
    "reportlab",
    "networkx",
    "psycopg[binary]",
    "pytest",
    "pytest-timeout",
    "pytest-cov",
    "pytest-randomly",
    "pip-audit",
    "bandit",
    "protobuf",
    "grpcio",
    "pyjwt",
    "pymysql>=1.1.0",
]

[tool.setuptools.packages.find]
include = ["agent_alpha*"]
exclude = ["proto*"]

[tool.ruff]
target-version = "py312"
line-length = 100
# Generated protobuf/gRPC code (agent_alpha/a2a/*_pb2.py, *_pb2_grpc.py) is
# excluded from lint/format everywhere, not just specific Makefile targets.
# protoc emits PascalCase gRPC method/service names by convention — that
# will never satisfy pep8-naming (N) and isn't meant to. Mirrors the
# [[tool.mypy.overrides]] ignore_errors entry for agent_alpha.a2a.* below.
extend-exclude = ["agent_alpha/a2a"]

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "F",    # pyflakes
  "I",    # isort
  "B",    # flake8-bugbear
  "UP",   # pyupgrade
  "N",    # pep8-naming
  "T20",  # flake8-print: no print() in production code (anti-verbose)
  "C90",  # mccabe: complexity gate (max-complexity below)
]
ignore = [
  "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
# live_fire scripts are CLI entry points — print() is the intended output mechanism.
"agent_alpha/live_fire/*.py" = ["T201"]
# scout uses print() to stderr for real-time monologue output (CLI observable).
"agent_alpha/agents/alpha/scout.py" = ["T201"]
# js_lab generators are CLI scripts — print() is the intended output mechanism.
"js_lab/generate_bundle*.py" = ["T201"]
# lab_guard uses LabOnlyViolation (not Error suffix) as the canonical name
# in the safety-guard contract — renamed would break the test import surface.
"agent_alpha/live_fire/lab_guard.py" = ["N818"]

[tool.ruff.lint.mccabe]
max-complexity = 22  # gate god-functions; Celery task entry points are inherently branchy

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
exclude = ["tests/", "proto/"]

[[tool.mypy.overrides]]
module = "agent_alpha.a2a.*"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers --timeout=120 --timeout-method=thread"
markers = [
  "phase0: Phase 0 exit criteria tests",
  "phase1: Phase 1 exit criteria tests",
  "protected: Frozen contract tests — never modify",
  "integration: requires real backends (Postgres/Redis); skipped without them",
]
